--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,7 +37,7 @@
 							<%# //Centre opening hours (centre home page) %>
               <li class="open-hours-link-alt"><a href="<%= centre_hours_path( params[ :centre_id ] || params[ :id ] ) %>" target="_self"><span class="icon icon--hours icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Opening Hours</span></a></li>
 							<!-- <li><a href="#" target="_self"><span class="icon icon--dining icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Dining</span></a></li> -->
-							<li><a href="<%= centre_movies_path(params[ :centre_id ] || params[ :id ]) %>" target="_self"><span class="icon icon--video icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Cinemas</span></a></li>
+							<!-- <li><a href="<%= centre_movies_path(params[ :centre_id ] || params[ :id ]) %>" target="_self"><span class="icon icon--video icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Cinemas</span></a></li> -->
 							<li><a href="<%= centre_info_path( params[ :centre_id ] || params[ :id ] ) %>" target="_self"><span class="icon icon--info icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Centre Information</span></a></li>
 							<!-- <li><a href="#" target="_self"><span class="icon icon--service icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Centre Services</span></a></li> -->
 						</ul>
