Putting movies back in
This reverts commit c95333394d69f740cb92c7bc5b88b96b002f46af, reversing
changes made to 8c2068769fadc890af568d38daff06ac500cd48e.

--- a/app/assets/stylesheets/partials/modules/_nav-contextual.scss
+++ b/app/assets/stylesheets/partials/modules/_nav-contextual.scss
@@ -95,7 +95,10 @@
             @include to-rem(padding-top padding-bottom, $spacing-base);
           }
 
-          /* Active state */
+          &:hover,
+          &:focus {color: $color-link-hover;}
+
+          /* When the nav item is the selected section */
           &.is-active {border-bottom-color: $color-brand;}
         }
 
