--- a/app/assets/stylesheets/partials/modules/_hero.scss
+++ b/app/assets/stylesheets/partials/modules/_hero.scss
@@ -21,17 +21,17 @@
   @include respond-min($non-palm) {
     @include to-rem(height, 300);
     @include to-rem(margin-bottom, $spacing-dbl);
-  }
 
-  /* Shared styles */
-  .icon,
-  h1 {
-    display: inline-block;
-    vertical-align: middle;
+    /* Shared styles */
+    .hero__icon,
+    h1 {
+      display: inline-block;
+      vertical-align: middle;
+    }
   }
 
   /* Hero icon next to the heading   */
-  .icon:before {
+  .hero__icon:before {
     @include font-size(30, 1);
 
     @include respond-min($non-palm) {
@@ -49,9 +49,17 @@
     }
   }
 }
-
+  
+  /* Hero inner */
   @include respond-min($lap-lrg) {
-    .hero__inner {
-      text-align: left;
-    }
+    .hero__inner {text-align: left;}
   }
+
+    /* Hero intro - wrapper around content that comes under the hero heading */
+    .hero__intro {
+      @include to-rem(margin-top, $spacing-half);
+
+      @include respond-min($non-palm) {
+        @include to-rem(margin-top, $spacing-base);
+      }
+    }
