Fix styles and reworked controller and routes for t&c and privacy policy

--- a/app/views/pages/privacy_policy.html.erb
+++ b/app/views/pages/privacy_policy.html.erb
@@ -1,6 +1,6 @@
 <div class="island">
 
-  <h1 class="detail-view__hdr hn" id="detail-view__hdr">Westfield Privacy Policy</h1>
+  <h1 class="detail-view__hdr hn" id="detail-view__hdr">Westfield Privacy Policies</h1>
 
   <div class="islet islet--top detail-view__divider detail-view__divider--top detail-view__desc txt-formatted">
 
@@ -29,9 +29,7 @@
 
     <p>In addition to the purposes set out above, this information may be used by Westfield in connection with the management and security of the Westfield shopping centres generally, and may be provided to law enforcement and government bodies, insurers, Westfield staff and subcontractors, third parties who provide Westfield with services from time to time and retailers for these purposes.</p>
 
-    <%# TODO: CHECK LINK%>
-    <p>Additionally, Westfield also conducts certain online activities through the Westfield Online site. The collection of personal information through these activities and information associated with the Westfield Online site is dealt with in the Westfield 
-    Online Privacy Policy, which can be found at http://www.westfield.com.au/au/help/online-privacy-policy</p>
+    <p>Additionally, Westfield also conducts certain online activities through the Westfield Online site. The collection of personal information through these activities and information associated with the Westfield Online site is dealt with in the Westfield Online Privacy Policy, which can be found in the <%= link_to 'Westfield Online Privacy Policy', '#online-privacy-policy' %> section.</p>
 
     <h4>Retailers</h4>
 
@@ -119,8 +117,7 @@
 
     <h3>Changes to our privacy policy</h3>
 
-    <%# TODO: check link %>
-    <p>This privacy policy relates to our current privacy standards. We may vary our privacy policy from time to time. We will notify you of any changes by publishing the latest policy from time to time at <a href="#">http://westfield.com.au/au/help/privacy-policy</a>.</p>
+    <p>This privacy policy relates to our current privacy standards. We may vary our privacy policy from time to time. We will notify you of any changes by publishing the latest policy from time to time at http://westfield.com.au/privacy-policy.</p>
 
     <p>Westfield also has a specific privacy policy tailored to its internet operations that can be viewed below.</p>
 
