--- a/app/views/pages/terms_conditions.html.erb
+++ b/app/views/pages/terms_conditions.html.erb
@@ -137,9 +137,9 @@
 
     <h3>13. Privacy</h3>
 
-    <p>Westfield may collect your personal information through your use of the Site or through your contact with Westfield. Any personal data and other information provided by you will be processed by Westfield in accordance with the <%= link_to 'Westfield Online Privacy Policy', "#{privacy_policy_index_path}#online-privacy-policy" %></a>.</p>
+    <p>Westfield may collect your personal information through your use of the Site or through your contact with Westfield. Any personal data and other information provided by you will be processed by Westfield in accordance with the <%= link_to 'Westfield Online Privacy Policy', '/privacy-policy#online-privacy-policy' %></a>.</p>
 
-    <p>By providing any such personal data or other information you agree to the terms of the <%= link_to 'Westfield Online Privacy Policy', "#{privacy_policy_index_path}#online-privacy-policy" %>, and in particular you agree that Westfield or members of the Westfield Group can collect, hold, use and disclose your personal information in the following ways:</p>
+    <p>By providing any such personal data or other information you agree to the terms of the <%= link_to 'Westfield Online Privacy Policy', '/privacy-policy#online-privacy-policy' %>, and in particular you agree that Westfield or members of the Westfield Group can collect, hold, use and disclose your personal information in the following ways:</p>
 
     <ul>
       <li>for the purpose of and incidental to your use of the Site, including facilitating the completion of orders through the Site and other uses and disclosures we required to operate the Site;</li>
