--- a/app/assets/stylesheets/partials/modules/_txt-formatted.scss
+++ b/app/assets/stylesheets/partials/modules/_txt-formatted.scss
@@ -13,7 +13,8 @@
 		Style Guide -> Modules -> Text Formatted
 */
 
-.txt-formatted {
+/* Increase specificity so we can override formats set in other modules when `txt-formatted` is being used */
+body .txt-formatted {
   @include font-size($font-size-sml);
 
   /* Increase text size at this breakpoint */
