--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -135,7 +135,7 @@
     <div class="container">
       <ul class="national__footer__nav horiz-list--slash">
         <li>
-          <%= link_to 'Westfild Group', 'http://corporate.westfield.com/', rel: 'external' %>
+          <%= link_to 'Westfield Group', 'http://corporate.westfield.com/', rel: 'external' %>
         </li>
         <li>
           <a href="<%= root_path %>"><abbr title="Australia">AU</abbr></a>
@@ -162,12 +162,12 @@
           <li>
             <small>&copy; Westfield <%= Time.now.year %></small>
           </li>
-          <%# <li> %>
-            <%#= link_to 'Terms &amp; Conditions'.html_safe, '#' %>
-          <%# </li>
-          <li> %>
-            <%#= link_to 'Privacy Policy', '#' %>
-          <%# </li> %>
+          <li>
+            <%= link_to 'Terms &amp; Conditions'.html_safe, '/terms-conditions' %>
+          </li>
+          <li>
+            <%= link_to 'Privacy Policy', '/privacy-policy' %>
+          </li>
         </ul>
       </nav>
     </div>
