--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -104,14 +104,13 @@
 					<%# //Social follow navigation - for 'Centre home page banner' only at large desktop size %>
 
 					<%# Tertiary navigation %>
-					<%# [BACK END] `href`s for these links need to be added %>
-					<!-- <nav class="nav-tertiary" role="navigation" aria-label="Tertiary navigation">
+					<nav class="nav-tertiary" role="navigation" aria-label="Tertiary navigation">
 						<ul>
-							<li><a href="#" target="_self">Westfield Group</a></li>
-							<li><a href="#" target="_self">Terms &amp; Conditions</a></li>
-							<li><a href="#" target="_self">Privacy Policy</a></li>
+							<li><%= link_to 'Westfield Group', 'http://corporate.westfield.com/', rel: 'external' %></li>
+							<li><%= link_to 'Terms &amp; Conditions'.html_safe, '/terms-conditions' %></li>
+							<li><%= link_to 'Privacy Policy', '/privacy-policy' %></li>
 						</ul>
-					</nav> -->
+					</nav>
 					<%# //Tertiary navigation %>
 
 				</div>
