--- a/app/views/pages/privacy_policy.html.erb
+++ b/app/views/pages/privacy_policy.html.erb
@@ -1,6 +1,6 @@
 <div class="island">
 
-  <h1 class="detail-view__hdr hn" id="detail-view__hdr">Westfield Privacy Policies</h1>
+  <h1 class="detail-view__hdr hn">Westfield Privacy Policies</h1>
 
   <div class="islet islet--top detail-view__divider detail-view__divider--top detail-view__desc txt-formatted">
 
