--- a/app/views/pages/terms_conditions.html.erb
+++ b/app/views/pages/terms_conditions.html.erb
@@ -1,6 +1,6 @@
 <div class="island">
 
-  <h1 class="detail-view__hdr hn" id="detail-view__hdr">Terms &amp; Conditions of Use</h1>
+  <h1 class="detail-view__hdr hn">Terms &amp; Conditions of Use</h1>
 
   <div class="islet islet--top detail-view__divider detail-view__divider--top detail-view__desc txt-formatted">
     <h2>General Terms &amp; Conditions of Use</h2>
