--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,7 +5,7 @@
 
     <%# Product name, brand and price %>
     <header class="island detail-view__divider">
-      <h1 class="detail-view__hdr hn detail-view__mrg-half" id="detail-view__hdr"><%= @product.name %></h1>
+      <h1 class="detail-view__hdr hn detail-view__mrg-half"><%= @product.name %></h1>
       <p class="detail-view__meta">
         <span class="detail-view__subtle-txt">from</span>
         <%= @product.retail_chain_name %>
