--- a/app/views/pages/privacy_policy.html.erb
+++ b/app/views/pages/privacy_policy.html.erb
@@ -10,7 +10,7 @@
 
     <p>Westfield recognises the trust you are placing in us through your dealings with us. We are committed to the protection of your personal information. Our policies comply with our obligations under the National Privacy Principles that form part of the <span class="txt-italic">Privacy Act 1988</span> and are intended to protect your privacy in respect of any personal information that you may provide to us.</p>
 
-    <p>Members of the Westfield Group, comprising Westfield Holdings Limited ABN 66 001 671 496, Westfield Management Limited ABN 41 001 670 579 (as responsible entity of Westfield Trust), Westfield America Management Limited ABN 66 072 780 619 as responsible entity of Westfield America Trust) and their respective controlled entities, and the owners of the Australian shopping centres managed by members of the Westfield Group, may collect personal and other information in the circumstances set out below. We refer to each of these entities in this policy as "us", "we", or "Westfield".</p>
+    <p>Members of the Westfield Group, comprising Westfield Holdings Limited ABN (Australian Business Number) 66 001 671 496, Westfield Management Limited ABN 41 001 670 579 (as responsible entity of Westfield Trust), Westfield America Management Limited ABN 66 072 780 619 as responsible entity of Westfield America Trust) and their respective controlled entities, and the owners of the Australian shopping centres managed by members of the Westfield Group, may collect personal and other information in the circumstances set out below. We refer to each of these entities in this policy as "us", "we", or "Westfield".</p>
 
     <h3>What personal information Westfield generally collects and why:</h3>
 
@@ -39,7 +39,7 @@
       <li>contact and insurance details;</li>
       <li>ABNs;</li>
       <li>information as to retailers' financial standing and retailing experience; and</li>
-      <li>other financial and trading information,</li>
+      <li>other financial and trading information</li>
     </ul>
 
     <p>Westfield requires this information to evaluate whether the relevant centre owner should enter into a lease or licence with the retailer; to assist Westfield in the management of their relationship; and to monitor the performance of the centre. Occasionally, the information may also be made available to others in connection with any transactions involving the ownership of the centre.</p>
@@ -135,7 +135,7 @@
       <li>you would like to discuss any issues about our privacy policy.</li>
     </ul>
     
-    <p>You can contact Westfield's Privacy Officer on (ph) 02 9358 7000, via email at <%= mail_to 'privacy@au.westfield.com' %>, or in writing to: Privacy Officer, Westfield Group, Level 30, 85 Castlereagh Street, Sydney, NSW 2000.</p>
+    <p>You can contact Westfield's Privacy Officer on (ph) <a href="tel:(02)93587000">02 9358 7000</a>, via email at <%= mail_to 'privacy@au.westfield.com' %>, or in writing to: Privacy Officer, Westfield Group, Level 30, 85 Castlereagh Street, Sydney, NSW 2000.</p>
 
     <h2 id="online-privacy-policy">Westfield Online Privacy Policy</h2>
 
@@ -232,10 +232,10 @@
     <p>You will only receive emails from westfield.com if:</p>
 
     <ul>
-      <li><span class="txt-bold">You subscribe to our Email Newsletters service.</span> Our Email Newsletters will keep you informed of the latest offers, current promotions and specials at the centre(s) of your choice and also Media Releases, Annual Reports and Financial Reports from the Westfield Corporate site. If you no longer wish to receive Email Newsletters, you may unsubscribe by logging into the Site and deselecting your choices from Email Newsletters.</li>
-      <li><span class="txt-bold">A friend nominates you to receive a page from the Westfield Site.</span> The email will be sent to you on behalf of your friend. You will not receive subsequent e-mails from us, because Westfield will not record your e-mail address.</li>
-      <li><span class="txt-bold">You request information about our services when you choose to contact us.</span> You will not be added to a mailing list of any kind and will only receive e-mail in the matter that you have contacted us about.</li>
-      <li><span class="txt-bold">You provide your details and request that we contact you</span> when you send us your Resume or when you complete our Customer Service Survey.</li>
+      <li><strong>You subscribe to our Email Newsletters service.</strong> Our Email Newsletters will keep you informed of the latest offers, current promotions and specials at the centre(s) of your choice and also Media Releases, Annual Reports and Financial Reports from the Westfield Corporate site. If you no longer wish to receive Email Newsletters, you may unsubscribe by logging into the Site and deselecting your choices from Email Newsletters.</li>
+      <li><strong>A friend nominates you to receive a page from the Westfield Site.</strong> The email will be sent to you on behalf of your friend. You will not receive subsequent e-mails from us, because Westfield will not record your e-mail address.</li>
+      <li><strong>You request information about our services when you choose to contact us.</strong> You will not be added to a mailing list of any kind and will only receive e-mail in the matter that you have contacted us about.</li>
+      <li><strong>You provide your details and request that we contact you</strong> when you send us your Resume or when you complete our Customer Service Survey.</li>
     </ul>
 
     <h3>What is a cookie and what are they used for?</h3>
@@ -260,7 +260,7 @@
 
     <h3>If something goes wrong</h3>
 
-    <p>Please contact us by email or by phone, using our Contact Us function if you believe:</p>
+    <p>Please contact us by email or by phone, if you believe:</p>
 
     <ul>
       <li>someone has gained access to your personal information by mistake</li>
@@ -268,7 +268,7 @@
       <li>you would like to discuss any issues about our privacy policy.</li>
     </ul>
 
-    <p>We will try to satisfy any privacy questions that you have and correct any errors on our part. If you still have concerns please contact our Privacy Officer by email on <%= mail_to 'privacy@au.westfield.com' %>, or phoning (+61 2) 9358 7000.</p>
+    <p>We will try to satisfy any privacy questions that you have and correct any errors on our part. If you still have concerns please contact our Privacy Officer by email on <%= mail_to 'privacy@au.westfield.com' %>, or phoning <a href="tel:(+612)93587000">(+61 2) 9358 7000</a>.</p>
 
     <h3>Changes to our Privacy Statement</h3>
 
