--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,14 +2,14 @@
 
   <div class="island detail-view__divider">
     <header class="detail-view__mrg-base">
-      <h1 class="detail-view__hdr hn" id="detail-view__hdr"><%= @event.name %></h1>
+      <h1 class="detail-view__hdr hn" id="detail-view__hdr" itemprop="summary"><%= @event.name %></h1>
       <ul class="detail-view__meta islet islet--top-btm detail-view__divider detail-view__divider--top-btm horiz-list horiz-list--fit">
         <li class="detail-view__subtle-txt"><%= @event.date '%-d %b %Y' %></li><!--
       --><li><span class="icon icon--pin icon--lrg icon--spacing" aria-hidden="true"></span><span itemprop="location"><%= @event.location %></span></li>
       </ul>
     </header>
 
-    <div class="detail-view__media detail-view__mrg-base">
+    <div class="detail-view__media detail-view__mrg-base" itemprop="photo">
       <%= fetch_image_tag @event.image,
         alt: "Photo of event: #{@event.name}",
         width: 638,
@@ -17,15 +17,15 @@
       %>
     </div>
 
-    <h2 class="detail-view__hdr-sub hn">Event Details</h2>
-    <div class="detail-view__desc txt-formatted txt-formatted--user-generated">
-      <p itemprop="summary"><%= @event.description %></p>
-      <div itemprop="description">
-        <% @event.body.each do |paragraph| %>
-          <p><%= paragraph %></p>
-        <% end %>
+    <%- if @event.description.present? -%>
+      <h2 class="detail-view__hdr-sub hn">Event Details</h2>
+      <div class="detail-view__desc" itemprop="description">
+        <% to_paragraphs(@event.description).each do |text| %>
+          <p><%= text %></p>
+        <%- end %>
       </div>
-    </div>
+    <% end %>
+
   </div>
 
   <div class="detail-view__schedule island">
@@ -39,8 +39,8 @@
         </em>
       </dt>
       <dd>
-        <time itemprop="startDate" datetime="<%= @event.start %>"><%= @event.start '%l:%M%P' %></time> -
-        <time itemprop="endDate" datetime="<%= @event.finish %>"><%= @event.finish '%l:%M%P' %></time>
+        <time itemprop="startDate" datetime="<%= DateTime.parse(@event.start + " " + @event.date).iso8601 %>"><%= @event.start '%l:%M%P' %></time> -
+        <time itemprop="endDate" datetime="<%= DateTime.parse(@event.finish + " " + @event.date).iso8601 %>"><%= @event.finish '%l:%M%P' %></time>
       </dd>
     </dl>
   </div>
