Style product pagination - WSF-5634

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -121,7 +121,7 @@ Global stylesheet
 @import "partials/modules/sprite";
 @import "partials/modules/icon";
 @import "partials/modules/preloader";
-@import "partials/modules/pagination";
+@import "partials/modules/pager";
 @import "partials/modules/thumbnail-grid";
 @import "partials/modules/tile";
 @import "partials/modules/detail-view";
