--- a/app/views/deals/show.html.erb
+++ b/app/views/deals/show.html.erb
@@ -23,7 +23,9 @@
     <%# Contact store %>
     <div class="island island--fill island--center islet-tops">
       <span class="hide-fully--non-palm">
-        <a href="tel:<%= (@store.phone_number || '').gsub(/\s+/,'') %>" class="btn btn--full btn--main btn--main-alt2 btn--main-lrg"><span class="icon icon--phone icon--xlrg icon--spacing-lrg icon--flush-top" aria-hidden="true"></span><strong>Call <%= @store.name %></strong></a>
+        <%= phone_link @store.phone_number, class: 'btn btn--full btn--main btn--main-alt2 btn--main-lrg' do |phone_number| %>
+          <span class="icon icon--phone icon--xlrg icon--spacing-lrg icon--flush-top" aria-hidden="true"></span><strong>Call <%= @store.name %></strong>
+        <% end %>
       </span>
       <p class="detail-view__check-avble hide-fully--palm"><span class="detail-view__subtle-txt">Check store availability</span> <em><span class="icon icon--phone icon--lrg icon--spacing" aria-hidden="true"></span> <%= @store.phone_number %></em></p>
     </div>
