--- a/app/views/centre_service_details/show.html.erb
+++ b/app/views/centre_service_details/show.html.erb
@@ -7,38 +7,39 @@
     <h2>Concierge Services</h2>
 
     <%# Concierge Desk %>
-    <div class="grid grid--gutter-dbl grid--mrg-dbl-non-palm">
-      <div class="grid__item non-palm-one-half">
-        <h3>Concierge Desk</h3>
+    <% if @concierge.present? %>
+      <div class="grid grid--gutter-dbl grid--mrg-dbl-non-palm">
+        <div class="grid__item non-palm-one-half">
+          <h3>Concierge Desk</h3>
+          <% to_paragraphs(@concierge.description).each do |text| %>
+            <p><%= text %></p>
+          <% end %>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut lectus libero, pellentesque at enim tempus, tempus tincidunt libero. Fusce vulputate.</p>
+          <h3 class="txt-formatted__unbold hide-fully--palm flush--btm">Contact Concierge Desk</h3>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut lectus libero, pellentesque at enim tempus, tempus tincidunt libero. Fusce vulputate.</p>
+          <%# Show concierge number if at non-palm size %>
+          <div class="hide-fully--palm txt-xlrg">
+            <span class="icon icon--phone2 icon--mega icon--spacing-lrg" aria-hidden="true"></span>
+            <span class="hide-visually">Phone number</span>
+            <%= @concierge.phone_no %>
+          </div>
+          <%# //Show centre number if at non-palm size %>
 
-        <h3 class="txt-formatted__unbold hide-fully--palm flush--btm">Contact Concierge Desk</h3>
-
-        <%# Show concierge number if at non-palm size %>
-        <div class="hide-fully--palm txt-xlrg">
-          <span class="icon icon--phone2 icon--mega icon--spacing-lrg" aria-hidden="true"></span>
-          <span class="hide-visually">Phone number</span>
-          1234 5678
+          <%# Show CTA button for concierge contact number for palm %>
+          <span class="hide-fully--non-palm">
+            <a href="tel:1234 5678 || '').gsub(/\s+/,'') %>" class="txt-center btn btn--full btn--main btn--main-alt2 btn--main-lrg">
+              <span class="icon icon--phone icon--xlrg icon--spacing-lrg icon--flush-top" aria-hidden="true"></span>
+              <strong>Call Concierge Desk</strong>
+            </a>
+          </span>
+          <%# //Show CTA button for centre contact number for palm %>
         </div>
-        <%# //Show centre number if at non-palm size %>
 
-        <%# Show CTA button for concierge contact number for palm %>
-        <span class="hide-fully--non-palm">
-          <a href="tel:1234 5678 || '').gsub(/\s+/,'') %>" class="txt-center btn btn--full btn--main btn--main-alt2 btn--main-lrg">
-            <span class="icon icon--phone icon--xlrg icon--spacing-lrg icon--flush-top" aria-hidden="true"></span>
-            <strong>Call Concierge Desk</strong>
-          </a>
-        </span>
-        <%# //Show CTA button for centre contact number for palm %>
-      </div>
-
-      <div class="grid__item non-palm-one-half">
-         <%# Image/map goes here %>
-      </div>
-   </div>
+        <div class="grid__item non-palm-one-half">
+           <%# Image/map goes here %>
+        </div>
+     </div>
+   <% end %>
    <%# //Concierge Desk %>
 
    <%# Westfield gift cards %>
@@ -58,9 +59,10 @@
           <div class="grid__item one-whole non-palm-two-fifths">
             <a href="http://www.westfieldgiftcards.com.au/" rel="external" class="btn btn--main btn--main-alt btn--full">Buy Now</a>
           </div>
-          <div class="grid__item one-whole non-palm-three-fifths">
-            or <a href="#">redeem at these stores</a>
-          </div>
+          <%# TODO: Enable when link provided %>
+          <%#<div class="grid__item one-whole non-palm-three-fifths">%>
+            <%#or%> <%#= link_to 'redeem at these stores', '#' %>
+          <%#</div>%>
         </div>
       </div>
    </div>
